--- a/Notebooks/Test.ipynb
+++ b/Notebooks/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "160d4da0",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "c5581b17",
    "metadata": {},
    "outputs": [],
@@ -32,10 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "b1ac25c8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:stravalib.util.limiter.SleepingRateLimitRule:No rates present in response headers\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -48,7 +55,21 @@
       " 3. 3 + 2 (4.50km/Min) + 3 | root='Run' | 8.02 km | 43 min | 2025-11-04\n",
       " 4. Workout | root='Run' | 2.53 km | 46 min | 2025-11-03\n",
       " 5. Morning Run | root='Run' | 13.30 km | 74 min | 2025-11-02\n",
-      "r status: 200\n",
+      "r status: 401\n",
+      "Token expired, refreshing...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:stravalib.util.limiter.SleepingRateLimitRule:No rates present in response headers\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "siamo qui\n",
       "\n",
       "🧪 Raw JSON for the latest activity (first 1):\n",
@@ -337,7 +358,7 @@
       "  }\n",
       "]\n",
       "\n",
-      "⏳ Rate limit: 200,2000 | Usage: 6,12\n"
+      "⏳ Rate limit: 200,2000 | Usage: 4,4\n"
      ]
     }
    ],
